# src/TechInventory.Application/Merges/IMergeReferenceEntityCommand.cs
@@ -1,0 +1,8 @@
+namespace TechInventory.Application.Merges;
+
+public interface IMergeReferenceEntityCommand
+{
+    Guid SourceId { get; }
+
+    Guid TargetId { get; }
+}
